// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should be able to change textStyle 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={false}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 8,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            233,
            82,
            128,
          ],
          "model": "rgb",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "Montserrat-Regular",
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "#fff",
          },
          Object {
            "color": "red",
            "fontSize": 20,
          },
        ],
      ]
    }
  >
    Hello World
  </Text>
</TouchableOpacity>
`;

exports[`<Button /> should be in disabled mode if disabled true 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 8,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            341.7218543046358,
            77.4358974358974,
            92.64705882352942,
          ],
          "model": "hsl",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "Montserrat-Regular",
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "#fff",
          },
          undefined,
        ],
      ]
    }
  >
    Hello World
  </Text>
</TouchableOpacity>
`;

exports[`<Button /> should be in disabled mode if loading true and show ActivityIndicator 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={true}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 8,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            341.7218543046358,
            77.4358974358974,
            92.64705882352942,
          ],
          "model": "hsl",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <ActivityIndicator
    animating={true}
    color="#999999"
    hidesWhenStopped={true}
    size="small"
  />
</TouchableOpacity>
`;

exports[`<Button /> should renders correctly 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  disabled={false}
  feedback="opacity"
  onPress={[Function]}
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "red",
        "borderRadius": 8,
        "elevation": 2,
        "height": 40,
        "justifyContent": "center",
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 13,
          "width": 0,
        },
        "shadowOpacity": 0.12,
        "shadowRadius": 25,
        "width": "100%",
      },
      Object {
        "backgroundColor": Object {
          "color": Array [
            233,
            82,
            128,
          ],
          "model": "rgb",
          "valpha": 1,
        },
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "color": "#000",
          "fontFamily": "Montserrat-Regular",
          "fontSize": 16,
        },
        Array [
          Object {
            "color": "#fff",
          },
          undefined,
        ],
      ]
    }
  >
    Hello World
  </Text>
</TouchableOpacity>
`;

exports[`<Button /> should throw error if variant or color not passed as props 1`] = `"Button: You must provided at least one of variant or color"`;
